--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 html,body{
     font-family: 'Rubik', sans-serif;
-    background-color: #EEF0F4;
+    background-color: #d5d5d7;
     user-select: none;
 }
 #header{
